images fixes + staking update

--- a/lisk-wallet.html
+++ b/lisk-wallet.html
@@ -150,7 +150,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                         </h1>
                         <div class="mobile-hide">
-                    <a href="#download"><img src="css/images/mainnotebook.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
+                    <a href="#download"><img src="css/images/articles/lisk_lsk_wallet.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
                     </div>
                     <div class="mobile-only">
                     <a href="#download"><img src="css/images/mobile-interface-mobile.png"  alt class="mobile-interface-download only-mobile" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
