--- a/roadmap-for-2019.html
+++ b/roadmap-for-2019.html
@@ -173,7 +173,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li>Staking for PoS assets: <a href="https://atomicwallet.io/tezos">Tezos</a>, <a href="https://atomicwallet.io/cardano">Cardano</a>, <a href="https://atomicwallet.io/decred">Decred</a>, etc.
 </li> <br>
         <li>Non-fungible tokens and crypto-collectibles management.</li>
-        <li>Lighting implementation and cross-channel atomic swaps.
+        <li>Lightning implementation and cross-channel atomic swaps.
 </li>
         <li>Localization - multiple languages and local currencies support.
 </li>
