--- a/staking.html
+++ b/staking.html
@@ -13,6 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>What is Staking? | Coin Staking | Atomic Wallet</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/wallet.css">
 <link rel="stylesheet" href="css/header.css">
 <link rel="stylesheet" href=" https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/media-test-blog.css">
@@ -110,7 +111,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   </div>
                 </div>
      <p>Staking is a process of receiving profit for owning and holding cryptocurrency, validating transactions or setting up a node. </p>
-    <p>To get transactions validated they should be approved and added to a block by miners in Proof-of-work blockchains, like Bitcoin, or get approved by validators in Proof-of-Stake blockchains.  Proof-of-Stake (PoS) is a consensus algorithm, where you can stake your coins and receive rewards for transaction validation or receive dividends for holding funds.</p>
+    <p>To get transactions validated they should be approved and added to a block by miners in <a href="https://atomicwallet.io/proof-of-stake-vs-proof-of-work" target="_blank">Proof-of-work</a> blockchains, like <a href="https://atomicwallet.io/bitcoin-wallet" target="_blank">Bitcoin</a>, or get approved by validators in Proof-of-Stake blockchains.  <a href="https://atomicwallet.io/what-is-proof-of-stake" target="_blank">Proof-of-Stake (PoS)</a> is a consensus algorithm, where you can stake your coins and receive rewards for transaction validation or receive dividends for holding funds.</p>
     <p>Atomic Wallet allows you to interact with different blockchains in a secure and decentralized way. You will be able to stake your holding and receive passive income using Atomic Wallet.</p>
     <h3>How to stake coins?</h3>
     <ol>
@@ -131,26 +132,25 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <div class="container-flex">
         <div class="block-lg-12">
           <div class="block-row block-wrap wallets">
-            <h1 style="    text-align: center;
-    padding-bottom: 25px;">Coins with staking features</h1>
+            <h1 class="center">Coins with staking features</h1><br><br>
             <div class="div-items">
-            <a class="block-lg-3 wallet">
+            <a href="https://atomicwallet.io/tezos-wallet" class="block-lg-3 wallet">
               <img src="css/images/crypto-icon/XTZ.svg" alt="" width="100%">
               <span class="info">Tezos</span>
             </a>
-            <a class="block-lg-3 wallet">
+            <a href="https://atomicwallet.io/cosmos-wallet" class="block-lg-3 wallet">
               <img src="css/images/crypto-icon/ATOM.svg" alt="" width="100%">
               <span class="info">ATOM</span>
             </a>
-            <a class="block-lg-3 wallet">
+            <a href="https://atomicwallet.io/neo-wallet" class="block-lg-3 wallet">
               <img src="css/images/crypto-icon/NEO.svg" alt="" width="100%">
               <span class="info">NEO</span>
             </a>
-            <a class="block-lg-3 wallet">
+            <a href="https://atomicwallet.io/vechain-wallet" class="block-lg-3 wallet">
               <img src="css/images/crypto-icon/VET.svg" alt="" width="100%">
               <span class="info">VeChain</span>
             </a>
-            <a class="block-lg-3 wallet">
+            <a href="https://atomicwallet.io/ontology-wallet" class="block-lg-3 wallet">
               <img src="css/images/crypto-icon/ONT.svg" alt="" width="100%">
               <span class="info">Ontology</span>
             </a>
@@ -363,254 +363,3 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     
 </body>
 </html>
-
-<style type="text/css">
-  html {
-  font-family: 'Lato', sans-serif; }
-
-body {
-  font-size: 14pt;
-  font-weight: 300;
-  color: #616161; }
-
-body, div {
-  display: block;
-  margin: 0;
-  padding: 0; }
-.div-items {
-      width: 100%;
-    justify-content: space-between;
-}
-.container {
-  max-width: 940px;
-  margin: 20px auto;
-  padding: 0 20px; }
-
-.container-flex {
-  display: -webkit-box;
-  display: flex;
-  margin: 20px 0; }
-
-.container-flex div {
-  padding: 15px;
-  display: -webkit-box;
-  display: flex;
-  text-align: center; }
-.container-flex a {
-  text-decoration: none;
-}
-.container-flex a:hover {
-  text-decoration: underline;
-}
-
-.block-lg-1 {
-  -webkit-box-flex: 1;
-          flex: 1 1 8.33333%; }
-
-.block-lg-2 {
-  -webkit-box-flex: 1;
-          flex: 1 1 16.66667%; }
-
-.block-lg-3 {
-  -webkit-box-flex: 1;
-          flex: 1 1 25%; }
-
-.block-lg-4 {
-  -webkit-box-flex: 1;
-          flex: 1 1 33.33333%; }
-
-.block-lg-5 {
-  -webkit-box-flex: 1;
-          flex: 1 1 41.66667%; }
-
-.block-lg-6 {
-  -webkit-box-flex: 1;
-          flex: 1 1 50%; }
-
-.block-lg-7 {
-  -webkit-box-flex: 1;
-          flex: 1 1 58.33333%; }
-
-.block-lg-8 {
-  -webkit-box-flex: 1;
-          flex: 1 1 66.66667%; }
-
-.block-lg-9 {
-  -webkit-box-flex: 1;
-          flex: 1 1 75%; }
-
-.block-lg-10 {
-  -webkit-box-flex: 1;
-          flex: 1 1 83.33333%; }
-
-.block-lg-11 {
-  -webkit-box-flex: 1;
-          flex: 1 1 91.66667%; }
-
-.block-lg-12 {
-  -webkit-box-flex: 1;
-          flex: 1 1 100%; }
-
-
-.block-column {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column; }
-
-.block-row {
-  display: -webkit-box;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-          flex-direction: row; }
-
-.block-wrap {
-  flex-wrap: wrap; }
-
-.info {
-  align-self: center; }
-
-.wallets {
-  justify-content: space-around; }
-
-.wallet {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-          flex-direction: column;
-  max-width: 70px; }
-  .wallet > .info {
-    font-size: 20px; }
-
-.hidden-xs, .hidden-sm, .hidden-md, .hidden-lg {
-  display: none; }
-
-@media (min-width: 768px) and (max-width: 991px) {
-  .block-md-1 {
-    -webkit-box-flex: 1;
-            flex: 1 1 8.33333%; }
-  .block-md-2 {
-    -webkit-box-flex: 1;
-            flex: 1 1 16.66667%; }
-  .block-md-3 {
-    -webkit-box-flex: 1;
-            flex: 1 1 25%; }
-  .block-md-4 {
-    -webkit-box-flex: 1;
-            flex: 1 1 33.33333%; }
-  .block-md-5 {
-    -webkit-box-flex: 1;
-            flex: 1 1 41.66667%; }
-  .block-md-6 {
-    -webkit-box-flex: 1;
-            flex: 1 1 50%; }
-  .block-md-7 {
-    -webkit-box-flex: 1;
-            flex: 1 1 58.33333%; }
-  .block-md-8 {
-    -webkit-box-flex: 1;
-            flex: 1 1 66.66667%; }
-  .block-md-9 {
-    -webkit-box-flex: 1;
-            flex: 1 1 75%; }
-  .block-md-10 {
-    -webkit-box-flex: 1;
-            flex: 1 1 83.33333%; }
-  .block-md-11 {
-    -webkit-box-flex: 1;
-            flex: 1 1 91.66667%; }
-  .block-md-12 {
-    -webkit-box-flex: 1;
-            flex: 1 1 100%; } }
-
-@media (min-width: 450px) and (max-width: 767px) {
-  .block-sm-1 {
-    -webkit-box-flex: 1;
-            flex: 1 1 8.33333%; }
-  .block-sm-2 {
-    -webkit-box-flex: 1;
-            flex: 1 1 16.66667%; }
-  .block-sm-3 {
-    -webkit-box-flex: 1;
-            flex: 1 1 25%; }
-  .block-sm-4 {
-    -webkit-box-flex: 1;
-            flex: 1 1 33.33333%; }
-  .block-sm-5 {
-    -webkit-box-flex: 1;
-            flex: 1 1 41.66667%; }
-  .block-sm-6 {
-    -webkit-box-flex: 1;
-            flex: 1 1 50%; }
-  .block-sm-7 {
-    -webkit-box-flex: 1;
-            flex: 1 1 58.33333%; }
-  .block-sm-8 {
-    -webkit-box-flex: 1;
-            flex: 1 1 66.66667%; }
-  .block-sm-9 {
-    -webkit-box-flex: 1;
-            flex: 1 1 75%; }
-  .block-sm-10 {
-    -webkit-box-flex: 1;
-            flex: 1 1 83.33333%; }
-  .block-sm-11 {
-    -webkit-box-flex: 1;
-            flex: 1 1 91.66667%; }
-  .block-sm-12 {
-    -webkit-box-flex: 1;
-            flex: 1 1 100%; } }
-
-@media (max-width: 479px) {
-  .block-xs-1 {
-    -webkit-box-flex: 1;
-            flex: 1 1 8.33333%; }
-  .block-xs-2 {
-    -webkit-box-flex: 1;
-            flex: 1 1 16.66667%; }
-  .block-xs-3 {
-    -webkit-box-flex: 1;
-            flex: 1 1 25%; }
-  .block-xs-4 {
-    -webkit-box-flex: 1;
-            flex: 1 1 33.33333%; }
-  .block-xs-5 {
-    -webkit-box-flex: 1;
-            flex: 1 1 41.66667%; }
-  .block-xs-6 {
-    -webkit-box-flex: 1;
-            flex: 1 1 50%; }
-  .block-xs-7 {
-    -webkit-box-flex: 1;
-            flex: 1 1 58.33333%; }
-  .block-xs-8 {
-    -webkit-box-flex: 1;
-            flex: 1 1 66.66667%; }
-  .block-xs-9 {
-    -webkit-box-flex: 1;
-            flex: 1 1 75%; }
-  .block-xs-10 {
-    -webkit-box-flex: 1;
-            flex: 1 1 83.33333%; }
-  .block-xs-11 {
-    -webkit-box-flex: 1;
-            flex: 1 1 91.66667%; }
-  .block-xs-12 {
-    -webkit-box-flex: 1;
-            flex: 1 1 100%; }
-  .container-flex {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column; }
-  .container-flex div {
-    padding: 0; }
-  .wallets {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column;
-    flex-wrap: nowrap; }
-    .wallets .wallet {
-      align-self: center;
-      margin: 20px auto; } }
-</style>
