--- a/tether-wallet.html
+++ b/tether-wallet.html
@@ -9,7 +9,7 @@
     <meta name="twitter:creator" content="@atomicwallet">
     <meta name="twitter:title" content="Download Tether (USDT) Wallet">
     <meta name="twitter:description" content="Read about Tether blockchain and manage USDT + other 300 coins and tokens in Atomic Wallet interface. ">
-    <!-- <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/neo-wallet-twitter.png"> -->
+    <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/tether_usdt_wallet.png">
         <title>Tether (USDT) Wallet </title>
         <meta name="description" content="Download fast and secure Tether (USDT) wallet with built-in cryptocurrency exchange. Manage and swap your cryptos in one secure interface. ">
     <link rel="stylesheet" href="css/main.css">
@@ -152,7 +152,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                         </h1>
                         <div class="mobile-hide">
-                    <a href="#download"><img src="css/images/mainnotebook.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
+                    <a href="#download"><img src="css/images/articles/tether_usdt_wallet.png"  alt class="main-notebook main-notebook-wallet" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
                     </div>
                     <div class="mobile-only">
                     <a href="#download"><img src="css/images/mobile-interface-mobile.png"  alt class="mobile-interface-download only-mobile" data-aos="fade-left" data-aos-duration="800" style="margin-top: 7px;"> </a>
