--- a/blockchain-governance.html
+++ b/blockchain-governance.html
@@ -5,10 +5,10 @@
     <meta name="twitter:site" content="@atomicwallet">
     <meta name="twitter:creator" content="@atomicwallet">
     <meta name="twitter:title" content="Who Governs Blockchain?">
-    <meta name="twitter:description" content="Do you know who governs blockchain? There are many stategises to control the network, let's describe some of them...">
+    <meta name="twitter:description" content="Do you know who governs blockchain? There are many strategies to control the network, let's describe some of them">
     <meta name="twitter:image" content="https://atomicwallet.io/css/images/articles/why-blockchain-governance-is-needed-twitter.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Do you know who governs blockchain? There are many stategises to control the network, let's describe some of them..."/>
+    <meta name="description" content="Do you know who governs blockchain? There are many strategies to control the network, let's describe some of them..."/>
      <meta name="keywords" content="blockchain governance, who governs blockchain, who control blockchain">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
