--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <title>Atomic Wallet</title>
+    <title>Atomic Cryptocurrency Wallet</title>
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@atomicwallet">
     <meta name="twitter:creator" content="@atomicwallet">
