Airdrop page update

--- a/airdrop.html
+++ b/airdrop.html
@@ -317,7 +317,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <br><br>
         <div class="item-page-article no-background">
            <h2 class="f2-title f-bold">Airdrop rules</h2>
-            <p>We reward 10 AWC for registration + 5 additional AWC for each other referral user. To get AWC tokens, you should have 1 BNB or 50 AWC on your Atomic Wallet address at the snapshot moment. <br>
+            <p>We reward 10 AWC for registration + 5 additional AWC for each other referral user. To get AWC tokens, you should have 1 BNB or 50 BNB-AWC on your Atomic Wallet address at the snapshot moment. <br>
               Learn more about AWC: <a href="https://atomicwallet.io/token">https://atomicwallet.io/token</a></p>
             <h3 id="buy-bitcoin">Snapshot details</h3>
             <p>The snapshot takes place on the first day of each month at 12.00.00 am UTC. You shouldn’t move your funds from Atomic wallet until the snapshot will be done. </p>
@@ -341,7 +341,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p>You will receive 10 AWC for registration + 5 AWC if you use promo code.</p>
             <p>For each referral sign-up, using your promo code, you will get extra 5 AWC.</p>
             <p><b>Deposit Rule:</b></p>
-            <p>In order to receive airdrop you must hold at least 0.1 ETH / 50 AWC on your Atomic Wallet balance at the time of the snapshot. You will get the reward for referrals only if they meet the same rule.</p>
+            <p>In order to receive airdrop you must hold at least 1 BNB / 50 BNB-AWC on your Atomic Wallet balance at the time of the snapshot. You will get the reward for referrals only if they meet the same rule.</p>
             <p>No limitation for referrals number. However, we will check all the referrals for validity. If we see any suspicious activity, you will not get reward!</p>
             <p><b>Support:</b></p>
             <p>If you have any questions or suggestions, contact us at <a href="mailto:airdrop@atomicwallet.io">airdrop@atomicwallet.io</a> </p>
